# scd-edition

./: .gitignore  README.md  configs.json  pyproject.toml
jobs/: generate_decomp_jobs.py
jobs/file_lists/: sub01_day01.yaml  sub02_day01.yaml
resources/loaders_configs/: loader_h5.yaml  loader_mat.yaml  loader_otb+.yaml
resources/sessions/: ag_pilot_trapezoids.yaml
scripts/: add_force_to_decomp.py  batch_channel_check.py  batch_decompose.py
src/scd_app/: main.py
src/scd_app/core/: auto_editor.py  config.py  constants.py  data_handler.py  decomp_worker.py  filter_recalculation.py  mu_model.py  mu_properties.py  utils.py
src/scd_app/gui/: main_window.py
src/scd_app/gui/style/: styling.py
src/scd_app/gui/tabs/: config_tab.py  decomposition_tab.py  edition_tab.py  visualisation_tab.py
src/scd_app/gui/widgets/: mu_properties_panel.py  muap_popout.py  source_plot_widget.py
src/scd_app/io/: data_loader.py
